--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="banner">
           <h1>Web Developer & Front End Designer</h1>
           <p>Marcelo A. Macagnan</p>
-          <button>Saiba mais</button>
+          <button class="btn">Saiba mais</button>
         </div>
       </header>
 
@@ -48,147 +48,172 @@
           <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         </div>
       </aside>
-
-      <section class="sessao-conhecimentos">
-        <div class="sessao-header">
-          <h1>Conhecimentos</h1>
-        </div>
-        <div class="conhecimentos">
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-html5"></i>
-              <h3>HTML</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus autem culpa,
-                tempora nesciunt cum natus quam est molestias porro, ipsa, atque officiis
-                repellendus nihil fugiat laborum. Nihil voluptas suscipit neque!
-              </p>
-            </div>
-          </div>
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-css3-alt"></i>
-              <h3>CSS</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Sed, cupiditate? Dolor ut, sint dolore velit quaerat quis sed consectetur adipisci
-                molestias culpa dolorum ipsam magnam facilis, voluptatum laboriosam doloremque
-                placeat delectus doloribus corporis, explicabo dolores ea deserunt commodi.
-              </p>
-            </div>
-          </div>
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fas fa-pencil"></i>
-              <h3>Design</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Eum ea ab vel suscipit cumque? Doloribus, obcaecati omnis voluptatibus repellendus
-                aut dolorem. Deleniti repudiandae nam, dolor, exercitationem facere rem enim sit
-                quia eaque ab, cumque minima adipisci id? Totam?
-              </p>
-            </div>
-          </div>
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-js"></i>
-              <h3>Javascript</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Pariatur quia veritatis dolorem quibusdam et sequi repellendus, consequuntur
-                similique, modi itaque dolore! Dolorem, recusandae eum a natus molestiae, distinctio
-                modi ab vero labore deserunt perspiciatis aperiam praesentium qui nesciunt.
-              </p>
-            </div>
-          </div>
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-bootstrap"></i>
-              <h3>Bootstrap</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Velit omnis exercitationem sint quisquam quibusdam rerum inventore ea consequuntur
-                in laudantium molestias, vero iste commodi eius neque error tempora quasi
-                consectetur sed eos libero a. Sed, velit amet? Quia.
-              </p>
-            </div>
-          </div>
-          <div class="conhecimento">
-            <div class="conhecimento-header">
-              <i class="fab fa-github"></i>
-              <h3>Git & Github</h3>
-            </div>
-            <div class="conhecimento-text">
-              <p>
-                Doloremque iure perferendis praesentium, eum sequi, quaerat recusandae in minima
-                fugiat ex laborum deleniti perspiciatis magni adipisci! Amet quas omnis obcaecati
-                expedita tempore similique explicabo voluptatem veniam? Quia, voluptatem molestias!
-              </p>
-            </div>
-          </div>
-          <div class="conhecimentos-img-wrapper">
-            <img src="imagens/conhecimentos.png" alt="Conhecimentos" srcset="" />
-          </div>
-        </div>
-      </section>
-
-      <section class="sessao-projetos">
-        <div class="sessao-header">
-          <h1>Projetos</h1>
-        </div>
-        <div class="projetos">
-          <div class="card">
-            <div class="card-img-wrapper">
-              <div><img src="imagens/proj1.jpg" alt="imagem do projeto" /></div>
-              <div class="card-info">
-                <h2>ToDo List</h2>
-                <h3>Javascript</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, dolor! Voluptatem
-                  dolor delectus esse eveniet facere alias recusandae doloremque repellendus.
-                </p>
-                <button>Saiba Mais</button>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-wrapper">
-              <div><img src="imagens/proj2.jpg" alt="imagem do projeto" /></div>
-              <div class="card-info">
-                <h2>Maratona</h2>
-                <h3>HTML, CSS</h3>
-                <p>
-                  Labore aperiam in vel dignissimos suscipit rerum excepturi, consequuntur cumque.
-                  Neque fugit natus cumque saepe illo vel voluptatum pariatur nam?
-                </p>
-                <button>Saiba Mais</button>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-img-wrapper">
-              <div><img src="imagens/proj3.png" alt="imagem do projeto" /></div>
-              <div class="card-info">
-                <h2>Casa Bela</h2>
-                <h3>HTML</h3>
-                <p>
-                  Dolorum ipsum esse sunt repellendus illo quas, maiores tenetur doloremque
-                  voluptatibus exercitationem est obcaecati perferendis. Laborum cupiditate quasi
-                  tenetur minima!
-                </p>
-                <button>Saiba Mais</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
+    <section class="sessao-conhecimentos">
+      <div class="sessao-header">
+        <h1>Conhecimentos</h1>
+      </div>
+      <div class="conhecimentos">
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-html5"></i>
+            <h3>HTML</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus autem culpa,
+              tempora nesciunt cum natus quam est molestias porro, ipsa, atque officiis repellendus
+              nihil fugiat laborum. Nihil voluptas suscipit neque!
+            </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-css3-alt"></i>
+            <h3>CSS</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Sed, cupiditate? Dolor ut, sint dolore velit quaerat quis sed consectetur adipisci
+              molestias culpa dolorum ipsam magnam facilis, voluptatum laboriosam doloremque placeat
+              delectus doloribus corporis, explicabo dolores ea deserunt commodi.
+            </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fas fa-pencil"></i>
+            <h3>Design</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Eum ea ab vel suscipit cumque? Doloribus, obcaecati omnis voluptatibus repellendus aut
+              dolorem. Deleniti repudiandae nam, dolor, exercitationem facere rem enim sit quia
+              eaque ab, cumque minima adipisci id? Totam?
+            </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-js"></i>
+            <h3>Javascript</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Pariatur quia veritatis dolorem quibusdam et sequi repellendus, consequuntur
+              similique, modi itaque dolore! Dolorem, recusandae eum a natus molestiae, distinctio
+              modi ab vero labore deserunt perspiciatis aperiam praesentium qui nesciunt.
+            </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-bootstrap"></i>
+            <h3>Bootstrap</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Velit omnis exercitationem sint quisquam quibusdam rerum inventore ea consequuntur in
+              laudantium molestias, vero iste commodi eius neque error tempora quasi consectetur sed
+              eos libero a. Sed, velit amet? Quia.
+            </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-github"></i>
+            <h3>Git & Github</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>
+              Doloremque iure perferendis praesentium, eum sequi, quaerat recusandae in minima
+              fugiat ex laborum deleniti perspiciatis magni adipisci! Amet quas omnis obcaecati
+              expedita tempore similique explicabo voluptatem veniam? Quia, voluptatem molestias!
+            </p>
+          </div>
+        </div>
+        <div class="conhecimentos-img-wrapper">
+          <img src="imagens/conhecimentos.png" alt="Conhecimentos" srcset="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="sessao-projetos">
+      <div class="sessao-header">
+        <h1>Projetos</h1>
+      </div>
+      <div class="projetos">
+        <div class="card">
+          <div class="card-img-wrapper">
+            <div><img src="imagens/proj1.jpg" alt="imagem do projeto" /></div>
+            <div class="card-info">
+              <h2>ToDo List</h2>
+              <h3>Javascript</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, dolor! Voluptatem
+                dolor delectus esse eveniet facere alias recusandae doloremque repellendus.
+              </p>
+              <button class="btn">Saiba Mais</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img-wrapper">
+            <div><img src="imagens/proj2.jpg" alt="imagem do projeto" /></div>
+            <div class="card-info">
+              <h2>Maratona</h2>
+              <h3>HTML, CSS</h3>
+              <p>
+                Labore aperiam in vel dignissimos suscipit rerum excepturi, consequuntur cumque.
+                Neque fugit natus cumque saepe illo vel voluptatum pariatur nam?
+              </p>
+              <button class="btn">Saiba Mais</button>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img-wrapper">
+            <div><img src="imagens/proj3.png" alt="imagem do projeto" /></div>
+            <div class="card-info">
+              <h2>Casa Bela</h2>
+              <h3>HTML</h3>
+              <p>
+                Dolorum ipsum esse sunt repellendus illo quas, maiores tenetur doloremque
+                voluptatibus exercitationem est obcaecati perferendis. Laborum cupiditate quasi
+                tenetur minima!
+              </p>
+              <button class="btn">Saiba Mais</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="sessao-contato">
+      <div class="contato-wrapper">
+        <div class="contato-left"></div>
+        <div class="contato-right">
+          <h1>Contato</h1>
+          <form action="">
+            <div class="field-group">
+              <input type="text" class="field" id="nome">
+              <label for="nome" class="field-label">Nome</label>
+            </div>
+            <div class="field-group">
+              <input type="text" class="field" id="email">
+              <label for="email" class="field-label">E-mail</label>
+            </div>
+            <div class="field-group">
+              <textarea class="field" id="mensagem"></textarea>
+              <label for="mensagem" class="field-label">Mensagem</label>
+            </div>
+            <button type="submit" class="btn btn-submit">Enviar</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
   </body>
   <script src="script.js"></script>
 </html>
