--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imagens/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imagens/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imagens/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Portfólio</title>
@@ -36,10 +50,16 @@
         <nav>
           <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Conhecimentos</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Projetos</a>
+            </li>
             <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-            <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Orçamento</a>
+            </li>
           </ul>
         </nav>
         <div class="social-media">
@@ -61,9 +81,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus autem culpa,
-              tempora nesciunt cum natus quam est molestias porro, ipsa, atque officiis repellendus
-              nihil fugiat laborum. Nihil voluptas suscipit neque!
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus
+              autem culpa, tempora nesciunt cum natus quam est molestias porro,
+              ipsa, atque officiis repellendus nihil fugiat laborum. Nihil
+              voluptas suscipit neque!
             </p>
           </div>
         </div>
@@ -74,9 +95,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Sed, cupiditate? Dolor ut, sint dolore velit quaerat quis sed consectetur adipisci
-              molestias culpa dolorum ipsam magnam facilis, voluptatum laboriosam doloremque placeat
-              delectus doloribus corporis, explicabo dolores ea deserunt commodi.
+              Sed, cupiditate? Dolor ut, sint dolore velit quaerat quis sed
+              consectetur adipisci molestias culpa dolorum ipsam magnam facilis,
+              voluptatum laboriosam doloremque placeat delectus doloribus
+              corporis, explicabo dolores ea deserunt commodi.
             </p>
           </div>
         </div>
@@ -87,9 +109,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Eum ea ab vel suscipit cumque? Doloribus, obcaecati omnis voluptatibus repellendus aut
-              dolorem. Deleniti repudiandae nam, dolor, exercitationem facere rem enim sit quia
-              eaque ab, cumque minima adipisci id? Totam?
+              Eum ea ab vel suscipit cumque? Doloribus, obcaecati omnis
+              voluptatibus repellendus aut dolorem. Deleniti repudiandae nam,
+              dolor, exercitationem facere rem enim sit quia eaque ab, cumque
+              minima adipisci id? Totam?
             </p>
           </div>
         </div>
@@ -100,9 +123,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Pariatur quia veritatis dolorem quibusdam et sequi repellendus, consequuntur
-              similique, modi itaque dolore! Dolorem, recusandae eum a natus molestiae, distinctio
-              modi ab vero labore deserunt perspiciatis aperiam praesentium qui nesciunt.
+              Pariatur quia veritatis dolorem quibusdam et sequi repellendus,
+              consequuntur similique, modi itaque dolore! Dolorem, recusandae
+              eum a natus molestiae, distinctio modi ab vero labore deserunt
+              perspiciatis aperiam praesentium qui nesciunt.
             </p>
           </div>
         </div>
@@ -113,9 +137,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Velit omnis exercitationem sint quisquam quibusdam rerum inventore ea consequuntur in
-              laudantium molestias, vero iste commodi eius neque error tempora quasi consectetur sed
-              eos libero a. Sed, velit amet? Quia.
+              Velit omnis exercitationem sint quisquam quibusdam rerum inventore
+              ea consequuntur in laudantium molestias, vero iste commodi eius
+              neque error tempora quasi consectetur sed eos libero a. Sed, velit
+              amet? Quia.
             </p>
           </div>
         </div>
@@ -126,9 +151,10 @@
           </div>
           <div class="conhecimento-text">
             <p>
-              Doloremque iure perferendis praesentium, eum sequi, quaerat recusandae in minima
-              fugiat ex laborum deleniti perspiciatis magni adipisci! Amet quas omnis obcaecati
-              expedita tempore similique explicabo voluptatem veniam? Quia, voluptatem molestias!
+              Doloremque iure perferendis praesentium, eum sequi, quaerat
+              recusandae in minima fugiat ex laborum deleniti perspiciatis magni
+              adipisci! Amet quas omnis obcaecati expedita tempore similique
+              explicabo voluptatem veniam? Quia, voluptatem molestias!
             </p>
           </div>
         </div>
@@ -150,8 +176,9 @@
               <h2>ToDo List</h2>
               <h3>Javascript</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, dolor! Voluptatem
-                dolor delectus esse eveniet facere alias recusandae doloremque repellendus.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                dolor! Voluptatem dolor delectus esse eveniet facere alias
+                recusandae doloremque repellendus.
               </p>
               <button class="btn">Saiba Mais</button>
             </div>
@@ -164,8 +191,9 @@
               <h2>Maratona</h2>
               <h3>HTML, CSS</h3>
               <p>
-                Labore aperiam in vel dignissimos suscipit rerum excepturi, consequuntur cumque.
-                Neque fugit natus cumque saepe illo vel voluptatum pariatur nam?
+                Labore aperiam in vel dignissimos suscipit rerum excepturi,
+                consequuntur cumque. Neque fugit natus cumque saepe illo vel
+                voluptatum pariatur nam?
               </p>
               <button class="btn">Saiba Mais</button>
             </div>
@@ -178,9 +206,9 @@
               <h2>Casa Bela</h2>
               <h3>HTML</h3>
               <p>
-                Dolorum ipsum esse sunt repellendus illo quas, maiores tenetur doloremque
-                voluptatibus exercitationem est obcaecati perferendis. Laborum cupiditate quasi
-                tenetur minima!
+                Dolorum ipsum esse sunt repellendus illo quas, maiores tenetur
+                doloremque voluptatibus exercitationem est obcaecati
+                perferendis. Laborum cupiditate quasi tenetur minima!
               </p>
               <button class="btn">Saiba Mais</button>
             </div>
@@ -189,7 +217,6 @@
       </div>
     </section>
 
-
     <section class="sessao-contato">
       <div class="contato-wrapper">
         <div class="contato-left"></div>
@@ -197,11 +224,11 @@
           <h1>Contato</h1>
           <form action="">
             <div class="field-group">
-              <input type="text" class="field" id="nome">
+              <input type="text" class="field" id="nome" />
               <label for="nome" class="field-label">Nome</label>
             </div>
             <div class="field-group">
-              <input type="text" class="field" id="email">
+              <input type="text" class="field" id="email" />
               <label for="email" class="field-label">E-mail</label>
             </div>
             <div class="field-group">
@@ -214,6 +241,31 @@
       </div>
     </section>
 
+    <section class="sessao-orcamento">
+      <div class="orcamento-wrapper">
+        <h1>Faça um orçamento</h1>
+        <form action="">
+          <label for="qtde">Qtde de Páginas</label>
+          <input type="number" min="1" name="qtde" id="qtde" />
+          <label for="js">Preciso de um script JS</label>
+          <input type="checkbox" name="js" id="js" />
+          <label>Layout</label>
+          <div class="group-layout">
+            <div>
+              <input type="radio" name="layout" id="layout-sim" />
+              <label for="layout-sim">Preciso de um layout</label>
+            </div>
+            <div class="group-layout">
+              <input type="radio" name="layout" id="layout-nao" />
+              <label for="layout-nao">Já tenho um layout</label>
+            </div>
+          </div>
+          <label for="prazo">Prazo</label>
+          <input type="range" name="prazo" id="prazo" />
+          <button class="btn btn-orcamento" type="submit">Enviar</button>
+        </form>
+      </div>
+    </section>
   </body>
   <script src="script.js"></script>
 </html>
